--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@auth/core": "^0.38.0",
+    "@hookform/resolvers": "^5.0.1",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.2",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
@@ -34,6 +35,7 @@
     "tw-animate-css": "^1.2.5",
     "twilio": "^5.5.1",
     "uuid": "^11.1.0",
+    "yup": "^1.6.1",
     "zod": "^3.24.2"
   },
   "devDependencies": {
