--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "@hookform/resolvers": "^5.0.1",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.2",
-    "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/auth-js": "^2.69.1",
     "@supabase/auth-ui-react": "^0.4.7",
     "@supabase/ssr": "^0.6.1",
@@ -24,10 +23,12 @@
     "date-fns": "^4.1.0",
     "framer-motion": "^12.6.3",
     "lucide-react": "^0.487.0",
+    "luxon": "^3.6.1",
     "next": "^15.2.4",
     "next-themes": "^0.4.6",
     "openai": "^4.91.1",
     "react": "^19.1.0",
+    "react-datepicker": "^8.3.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.55.0",
     "sonner": "^2.0.3",
@@ -41,6 +42,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4.1.3",
+    "@types/luxon": "^3.6.2",
     "@types/node": "^20",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
