--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@auth/core": "^0.38.0",
     "@hookform/resolvers": "^5.0.1",
     "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-select": "^2.2.4",
     "@radix-ui/react-slot": "^1.1.2",
     "@supabase/auth-js": "^2.69.1",
     "@supabase/auth-ui-react": "^0.4.7",
