--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-datepicker": "^8.3.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.55.0",
+    "react-phone-input-2": "^2.15.1",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.1.0",
     "tw-animate-css": "^1.2.5",
