--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,11 +8,10 @@
     "forceConsistentCasingInFileNames": true,
     "noEmit": true,
     "esModuleInterop": true,
-    "module": "CommonJS",
-    "moduleResolution": "node",
+    "moduleResolution": "bundler",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "jsx": "preserve",
+    "jsx": "react-jsx",
     "incremental": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
@@ -24,7 +23,8 @@
     "paths": {
       "@/*": ["./*"]
     },
-    "outDir": "./dist"
+    "outDir": "./dist",
+    "module": "esnext"
   },
   "include": [
     "next-env.d.ts",
@@ -36,7 +36,8 @@
     "**/*.jsx",
     "next.config.js",
     "scripts/translateJson.ts",
-    "./scripts/**/*.ts"
+    "./scripts/**/*.ts",
+    ".next/dev/types/**/*.ts"
   ],
-  "exclude": ["node_modules", "app/globals.css"]
+  "exclude": ["node_modules"]
 }
